# ember-eye

./: .gitignore  .vercelignore  COMMIT_MESSAGE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  README.md  SECURITY_AUDIT_SUMMARY.md  VERCEL_FIX_SUMMARY.md  VERCEL_GUIDE.md  package-lock.json  package.json  vercel.json
backend/: .env.example  check_dependencies.py  main.py  pyproject.toml  recreate_model.py  requirements.txt  setup_model.py  test_api.py
backend/app/routers/: prediction.py  weather.py
backend/app/schemas/: prediction.py
backend/app/services/: model_service.py
docs/: API.md  CSS_BUILD_ENHANCEMENTS.md  CSS_MINIFICATION_FIX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  PRODUCTION_OPTIMIZATION.md  PROJECT_STRUCTURE.md  SECURITY_AUDIT.md  SECURITY_AUDIT_COMMIT.md  TESTING.md  VERCEL_DEPLOYMENT.md
firepre/: .env.example  .env.production  .stylelintrc.json  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  vercel.json  vite.config.js  vite.robust.config.js  vite.safe.config.js  vite.simple.config.js
firepre/scripts/: fix-css-before-build.sh  fix-css.js
firepre/src/: App.css  App.jsx  index.css  main.jsx
firepre/src/components/: ApiStatus.css  ApiStatus.jsx  BenefitsImpact.jsx  Footer.jsx  (+14 more)
scripts/: build-prod-safe.sh  check-env.js  ci-security-audit.sh  deploy-prep.sh  deploy.sh  prep-deploy.sh  security-audit.sh  setup.sh  update-scripts.sh  validate.sh
tests/backend/: api_test_scenarios.py  test_api.py  test_load_model.py  test_model.py
tests/frontend/: test_frontend_api.html
(+21 files in other folders)
